# nova-transcriber

./: .env.local  README.md  pyproject.toml  transcribe.py
