[project]
name = "nova-transcriber"
version = "1.0.0"
description = "A tool for transcribing audio files into text using Deepgram's API with Nova 3."
authors = [
    {name = "Dev Gill"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "deepgram-sdk (>=3.11.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
